fixed text vers positioning on mobile and desktop

--- a/server/static/css/story-text.css
+++ b/server/static/css/story-text.css
@@ -14,7 +14,7 @@ body {
   font-family: "Montserrat", sans-serif;
   margin-top: 10%;
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   background-image: linear-gradient(45deg, #c7c5ef, #96b5ec, #4379d3, #4354d0);
   background-size: 300% 300%;
   -webkit-animation: gradient 15s ease infinite;
@@ -27,13 +27,13 @@ body {
 }
 
 @media screen and (max-width: 1500px) {
-  body { margin-top: 10%;
+  body { margin-top: 10%; height: 80vh;
   }
 }
 
 
 @media screen and (min-width: 375px) and (max-width : 1024px){
-  body { margin-top: -15%;
+  body { margin-top: -15%;   height: 100vh;
   }
 }
 
@@ -76,7 +76,7 @@ h1 {
   margin-bottom: -10%;
   margin-left: -30%;
 }
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 375px) and (max-width: 1000px){
   h1 {
     font-size: 12px;
     line-height: 24px;
@@ -85,8 +85,8 @@ h1 {
 
 p {
   font-size: 20px;
-  line-height: 18px;
-  color: #889DB8;
+  line-height: 30px;
+  color: black;
   transform: translateY(20px);
   transition: all 0.4s ease;
   transition-delay: 0.3s;
@@ -109,17 +109,21 @@ p {
 
 @media screen and (max-width: 1500px) {
   p {
-    font-size: 24px;
+    font-size: 16px;
     line-height: 25px;
+    padding-bottom: 1%;
+    padding-top: 5%;
   }
   }
 
 
 
-@media screen and (min-width: 375px) and (max-width : 1024px){
+@media screen and (min-width: 375px) and (max-width: 1000px) {
   p {
-    font-size: 28px;
-    line-height: 35px;
+    font-size: 30px;
+    line-height: 38px;
+    padding-bottom: 20%;
+    padding-top: 20%;
   }
   }
 
@@ -143,8 +147,8 @@ p {
 }
 
 
-@media screen and (min-width: 375px) and (max-width : 1024px){
-  .swiper-wrapper{  width: 100%; height: 180%;
+@media screen and (max-width: 375px) and (max-width: 1000px) {
+  .swiper-wrapper{  width: 100%; height: 200%;
   }
 }
 
@@ -167,8 +171,8 @@ p {
 }
 
 
-@media screen and (min-width: 375px) and (max-width : 1024px){
-  .swiper-container {  max-height: 1000px; max-width: 1000px;
+@media screen and (min-width: 375px) and (max-width: 1000px) {
+  .swiper-container {  max-height: 1000px; max-width: 1000px; top: 5%;
   }
 }
 
@@ -270,7 +274,7 @@ p {
 .slider-buttons {
   position: absolute;
   display: flex;
-  top: 77%;
+  top: 100%;
   justify-content: flex-end;
   width: 100%;
   z-index: 9999;
@@ -284,8 +288,8 @@ p {
   }
 }
 
-@media screen and (min-width: 375px) and (max-width : 1024px){
-  .slider-buttons { margin-bottom: 10%; 
+@media screen and (min-width: 375px) and (max-width: 1000px){
+  .slider-buttons { margin-bottom: 10%; margin-top: 10%; 
   }
 }
 .swiper-button-play {
@@ -790,8 +794,7 @@ padding-bottom: 10px;
   .button6{
     display:inline-block;
     width: 150%;
-    padding: 10%;
-    margin: 10%;
+    height: 150%;
     border-radius:0.15em;
     box-sizing: border-box;
     text-decoration:none;
@@ -803,11 +806,12 @@ padding-bottom: 10px;
     box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
     text-align:center;
     position:relative;
-    font-size: 20pt;
+    font-size: 20px;
     top: 10%;
+    padding-top: 10%;
     cursor: pointer;
     z-index: 99999;
-    left: 350%;
+    left: 500%;
     display: block;
     }
 
@@ -815,32 +819,52 @@ padding-bottom: 10px;
       background-color: #3b4ab8;
   }
 
-    @media all and (max-width:30em){
+    /* @media all and (max-width:30em){
      .button6{
     display:block;
     margin:0.4em auto;
-    }}
+    }} */
 
-
-  @media screen and (min-width: 375px) and (max-width : 1024px){
-  .button6 { font-size: 60px; left: 200%; top: -20%; margin-bottom: 5%;
+@media screen and (max-width: 1500px){
+  .button6 { font-size: 20px; left: 500%;
   }
 }
+
+  @media screen and (min-width: 375px) and (max-width: 1000px){
+  .button6 { font-size: 50px; left: 300%; top: -20%;
+  }
+}
+
 
 .title{
 
   background-color: #e4e4e4;
-  height: 150px;
-  width: 400px;
+  height: 75px;
+  width: 200px;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0px 30px 60px rgba(0, 0, 0, 0.4);
-  margin-top: -15%;
-  margin-bottom: 50px;
+  /* margin-top: 5%; */
+  margin-bottom: 1%;
   /* padding-bottom: 10%; */
-  bottom: 10%;
+  /* top: 5%; */
   align-items: center;
   z-index: 9999;
 }
+@media screen and (max-width: 1500px) {
+  .title {
+    height: 75px;
+    width: 200px;
+    margin-bottom: 1%;
+  }
+}
+@media screen and (min-width: 375px) and (max-width: 1000px){
+  .title {
+    height: 85px;
+    width: 200px;
+  }
+}
+
+
 
 /* @media screen and (min-width: 375px) and (max-width : 1024px){
   .title { margin-top: -50%;
@@ -850,10 +874,10 @@ padding-bottom: 10px;
 #maintitle {
   position: absolute;
   left: 50%;
-  top: 25%;
-  transform: translate(-50%, -50%);
-  font-size: 5vw;
-  margin-top: -10vw;
+  top: 15%;
+  transform: translate(-50%, -10%);
+  font-size: 8vw;
+  margin-top: -5vw;
   z-index: 99999;
   filter: drop-shadow(0px 0px 13px black);
   font-family: 'Mouse Memoirs';
@@ -863,34 +887,73 @@ padding-bottom: 10px;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   pointer-events: none;
-  padding-top: 30%;
-  padding-bottom: 30%;
-  margin-bottom: 10%;
+  /* padding-top: 1%;
+  padding-bottom: 1%; */
+  /* margin-bottom: -30%; */
 }
-@media screen and (min-width: 375px) and (max-width : 1024px){
-  #maintitle { top: 15%; font-size: 10vw;
+@media screen and (max-width : 1500px){
+  #maintitle { top: 25%; font-size: 8vw; transform: translate(-50%, -50%);
+  }
+}
+
+@media screen and (min-width : 375px) and (max-width: 1000px){
+  #maintitle { top: 12%; font-size: 15vw;
   }
 }
 
 h2 {
   margin: 0;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 35px;
   color: #353535;
   transform: translateY(50px);
   transition: all 0.4s ease;
   transition-delay: 0.2s;
-  overflow: hidden;
   max-width: 100%;
-  text-overflow: ellipsis;
   white-space: nowrap;
-  margin-bottom: 10%;
-  margin-left: 30%;
+  padding-bottom: 10%;
+  margin-top: -15%;
+  margin-left: 25%;
+  /* margin-bottom: 5%;
+  margin-left: 30%; */
 }
-@media screen and (max-width: 520px) {
+
+@media screen and (max-width: 1500px) {
   h2 {
-    font-size: 12px;
-    line-height: 24px;
+    font-size: 20px;
+    align-items: center;
+    padding-bottom: 10%;
+    margin-top: -15%;
+    margin-left: 25%;
+    
   }
 }
+
+@media screen and (min-width: 375px) and (max-width: 1000px){
+  h2 {
+    font-size: 30px;
+    line-height: 24px;
+    padding-bottom: 10%;
+    margin-top: -15%;
+    margin-left: 15%;
+    padding-right: 5%;
+
+  }
+}
+
+/* .typewriter {
+  color: black;
+  text-align: justify; 
+  padding: 2%;  
+  padding-left: 5%; 
+  padding-right: 5%; 
+  text-indent: 2em;
+}
+
+@media screen and (min-width : 375px){
+  .typewriter { padding-top: 10%; padding-bottom: 10%;
+  }
+} */
+
+
